// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnsweredQuestionDetail matches the snapshot when a name is passed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="col-6 text-center"
      >
        <div
          class="border rounded p-1"
        >
          <p>
             
            Build our new application with Javascript
          </p>
        </div>
        <p>
          1
        </p>
        <p>
          100
          %
        </p>
      </div>
      <div
        class="col-6 text-center"
      >
        <div
          class="border rounded p-1"
        >
          <p>
             
            Build our new application with Typescript
          </p>
        </div>
        <p>
          0
        </p>
        <p>
          0
          %
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="col-6 text-center"
    >
      <div
        class="border rounded p-1"
      >
        <p>
           
          Build our new application with Javascript
        </p>
      </div>
      <p>
        1
      </p>
      <p>
        100
        %
      </p>
    </div>
    <div
      class="col-6 text-center"
    >
      <div
        class="border rounded p-1"
      >
        <p>
           
          Build our new application with Typescript
        </p>
      </div>
      <p>
        0
      </p>
      <p>
        0
        %
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AnsweredQuestionDetail matches the snapshot when no name is passed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="col-6 text-center"
      >
        <div
          class="border rounded p-1"
        >
          <p>
             
          </p>
        </div>
        <p />
        <p>
          %
        </p>
      </div>
      <div
        class="col-6 text-center"
      >
        <div
          class="border rounded p-1"
        >
          <p>
             
          </p>
        </div>
        <p />
        <p>
          %
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="col-6 text-center"
    >
      <div
        class="border rounded p-1"
      >
        <p>
           
        </p>
      </div>
      <p />
      <p>
        %
      </p>
    </div>
    <div
      class="col-6 text-center"
    >
      <div
        class="border rounded p-1"
      >
        <p>
           
        </p>
      </div>
      <p />
      <p>
        %
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AnsweredQuestionDetail matches the snapshot when no question is passed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="col-6 text-center"
      >
        <div
          class="border rounded p-1"
        >
          <p>
             
          </p>
        </div>
        <p />
        <p>
          %
        </p>
      </div>
      <div
        class="col-6 text-center"
      >
        <div
          class="border rounded p-1"
        >
          <p>
             
          </p>
        </div>
        <p />
        <p>
          %
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="col-6 text-center"
    >
      <div
        class="border rounded p-1"
      >
        <p>
           
        </p>
      </div>
      <p />
      <p>
        %
      </p>
    </div>
    <div
      class="col-6 text-center"
    >
      <div
        class="border rounded p-1"
      >
        <p>
           
        </p>
      </div>
      <p />
      <p>
        %
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AnsweredQuestionDetail matches the snapshot when question is passed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="col-6 text-center"
      >
        <div
          class="border rounded p-1"
        >
          <p>
             
            Build our new application with Javascript
          </p>
        </div>
        <p>
          1
        </p>
        <p>
          100
          %
        </p>
      </div>
      <div
        class="col-6 text-center"
      >
        <div
          class="border rounded p-1"
        >
          <p>
             
            Build our new application with Typescript
          </p>
        </div>
        <p>
          0
        </p>
        <p>
          0
          %
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="col-6 text-center"
    >
      <div
        class="border rounded p-1"
      >
        <p>
           
          Build our new application with Javascript
        </p>
      </div>
      <p>
        1
      </p>
      <p>
        100
        %
      </p>
    </div>
    <div
      class="col-6 text-center"
    >
      <div
        class="border rounded p-1"
      >
        <p>
           
          Build our new application with Typescript
        </p>
      </div>
      <p>
        0
      </p>
      <p>
        0
        %
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
